First attempt failed miserably
Kryonet is bad. Switching to netty. This is gonna be a pain.